Fix Divider visibility

--- a/SCSS/Modern Divider.scss
+++ b/SCSS/Modern Divider.scss
@@ -1,3 +1,8 @@
+:root {
+    --line-color: #DDD;
+    --line-color-dark: #535353;
+}
+
 // Divider
 	[data-rem-tags~="divider"] {
 		color: transparent;
